--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,19 @@
 [versions]
 agp = "8.7.3"
-kotlin = "2.1.10"
-coreKtx = "1.15.0"
+coreSplashscreen = "1.0.1"
+kotlin = "2.1.21"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
-composeBom = "2025.03.01"
-compose_nav_version = "2.8.9"
-lifecycle_version = "2.8.7"
-room_version = "2.6.1"
-ksp_version = "2.1.10-1.0.29"
-dagger2_version = "2.55"
+composeBom = "2025.05.01"
+compose_nav_version = "2.9.0"
+lifecycle_version = "2.9.0"
+room_version = "2.7.1"
+ksp_version = "2.1.21-2.0.1"
+dagger2_version = "2.56.2"
 coil_version = "3.0.4"
 okHttpClient_version = "4.12.0"
 retrofit_version = "2.11.0"
@@ -20,6 +21,7 @@ json_version = "1.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
